<resources>
    <string name="app_name">Longevity Calculator</string>
    <string name="age">Age</string>
    <string name="done">DONE</string>
    <string name="feet">Feet</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="inches">Inches</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="male">Male</string>
    <string name="smoking">Smoking</string>
    <string name="weight">Weight</string>
    <string name="modify_data">MODIFY DATA</string>
    <string name="bmi">BMI</string>
    <string name="life_expectancy">Life Expectancy</string>
</resources>
