<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_longevity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yee.longevitycalculator.LongevityActivity">


    <TextView
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age_label"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age_info"
        android:layout_toRightOf="@+id/age_label"
        android:layout_toEndOf="@+id/age_label"
        android:layout_alignLeft="@+id/lifeExpectancy"
        android:layout_alignStart="@+id/lifeExpectancy"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        />

    <TextView
        android:text="@string/bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bmiLabel"
        android:layout_below="@+id/age_label"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bmi"
        android:layout_below="@+id/age_info"
        android:layout_toRightOf="@+id/bmiLabel"
        android:layout_toEndOf="@+id/bmiLabel"
        android:layout_alignLeft="@+id/lifeExpectancy"
        android:layout_alignStart="@+id/lifeExpectancy"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/life_expectancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lifeExpectancyLabel"
        android:layout_below="@+id/bmiLabel"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lifeExpectancy"
        android:layout_toRightOf="@+id/lifeExpectancyLabel"
        android:layout_toEndOf="@+id/lifeExpectancyLabel"
        android:layout_below="@+id/bmi"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp" />

    <!-- Red line -->
    <View
        android:id="@+id/red_line"
        android:layout_height="5dp"
        android:layout_width="match_parent"
        android:background="#FF00"
        android:layout_below="@+id/lifeExpectancyLabel"
        android:layout_alignLeft="@+id/lifeExpectancyLabel"
        android:layout_alignStart="@+id/lifeExpectancyLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status"
        android:layout_below="@+id/red_line"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp" />

    <Button
        android:text="@string/modify_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/modifyDataButton"
        android:textSize="24sp" />

</RelativeLayout>
